--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>JS/Expert Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/main.js" async></script>
+	<script src="js/main_4_1.js" async></script>
 </head>
 
 <body>
@@ -55,8 +55,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/main.js"></script>
-
+	
 </body>
 
 </html>
